<resources>
    <string name="app_name">Athlete\'sFood</string>
    <string name="app_name_splash_screen">AthletesFood</string>
    <string name="start_greeting">Привет! Если ты читаешь этот текст, значит хочешь
        подкорректировать свою фигуру. А мы поможем и направим! Для начала давай узнаем, какая у
    нас отправная точка.</string>
    <string name="input_growth">Выбери свой рост (в сантиметрах):</string>
    <string name="input_weight">Выбери свой вес (в килограммах):</string>
    <string name="input_age">Выбери свой возраст:</string>
    <string name="pick_coeff_of_mobility">Выбери свой вид активности: </string>
    <string name="radio_button_low_activity">Низкая (сидячий образ жизни);</string>
    <string name="radio_button_small_activity">Малая (1–3 раза в неделю легкие тренировки);</string>
    <string name="radio_button_middle_activity">Средняя (1–3 раза в неделю интенсивные
        тренировки);</string>
    <string name="radio_button_high_activity">Высокая (более 3 тренировок в неделю высокой
        интенсивности).</string>
    <string name="basic_pool">Твой базовый пул - %1$d ккал. </string>
    <string name="basic_pool_description">Это и является нашей отправной точкой.
        Данный пул - не идеален, поскольку не учитывает целого ряда особенностей, однако для начала
    подойдет. В дальнейшем мы будем корректировать данное значение еженедельно для достижения
        максимальной эффективности.</string>
    <string name="next">Next</string>
    <string name="point">.</string>
    <string name="menu">Menu</string>
    <string name="food_database">Food</string>
    <string name="menu_history">History</string>
    <string name="create_new_menu">Create new menu</string>
    <string name="add_new_product">+ Add product</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="table_footer_product_name">Product\'s name</string>
    <string name="table_footer_product_weight">Weight, g </string>
    <string name="table_footer_product_calories">Calories,\nkcal </string>
    <string name="table_footer_product_proteins">Proteins, g</string>
    <string name="table_footer_product_fats">Fats, g</string>
    <string name="table_footer_product_carbohydrates">Carbohy\ndrates, g</string>
    <string name="product_reiteration">Product already added to menu</string>
    <string name="energy_pool">Energy pool: </string>
    <string name="save_menu">Save menu</string>
    <string name="save">Save</string>
    <string name="add_new_food_in_database">Add food</string>
    <string name="food_name">Product name:</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="product_type">Product type:</string>
    <string name="select_type">Select type</string>
    <string name="product_proteins">Product proteins: </string>
    <string name="add_product_proteins">Add proteins</string>
    <string name="product_fats">Product fats: </string>
    <string name="add_product_fats">Add fats</string>
    <string name="product_carbohydrates">Product carbohydrates: </string>
    <string name="add_product_carbohydrates">Add carbohydrates</string>
    <string name="product_calories">Product calories: </string>
    <string name="add_product_calories">Add calories</string>
    <string name="dialog_product_type">Product type</string>
    <string name="dialog_select_product">Select product: </string>
    <string name="dialog_product_proteins">Product proteins</string>
    <string name="dialog_select_proteins">Select the amount of proteins, g: </string>
    <string name="dialog_product_fats">Product fats</string>
    <string name="dialog_select_fats">Select the amount of fats, g: </string>
    <string name="dialog_product_carbohydrates">Product carbohydrates</string>
    <string name="dialog_select_carbohydrates">Select the amount \n of carbohydrates, g:</string>
    <string name="dialog_product_calories">Product calories</string>
    <string name="dialog_select_calories">Select the amount \n of calories, kcal: </string>
    <string name="gramm_abbreviation">&#160;g</string>
    <string name="calories_abbreviation">&#160;kcal</string>
    <string name="message_product_successfully_added_to_database">Product successfully added to database!</string>
    <string name="not_all_fields_are_filled">Not all fields are filled!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
